horizontal scroll fix

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   --Link-Water-White: #fbfcfe;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -24,6 +28,7 @@ body {
   overflow-x: hidden;
   background: #edf3f8;
   height: 100vh;
+  min-width: 100vw;
 }
 h1,
 h2,
