--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -72,7 +72,7 @@
 }
 @media screen and (max-width: 860px) {
   .heroImg {
-    width: 300px;
+    max-width: 300px;
   }
 }
 @media screen and (max-width: 820px) {
